--- a/src/scss/components/_site-search.scss
+++ b/src/scss/components/_site-search.scss
@@ -57,6 +57,8 @@
     background: 0;
     border: 0;
     color: $color-white;
+    font-size: 150%;
+    font-weight: bold;
 
     &:hover {
       cursor: pointer;
